--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "fetch-mock": "^7.2.2",
     "jest": "^23.6.0",
+    "node-fetch": "^2.2.0",
     "react-hot-loader": "^4.3.11",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
