--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "Rich",
+  "homepage": "https://richiemccoll.github.io/movie-search/",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -38,11 +41,12 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "gh-pages": "^2.0.1",
+    "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-dom": "16.5.0",
     "react-test-renderer": "^16.6.0",
-    "styled-jsx": "^3.1.0",
-    "prop-types": "^15.6.2"
+    "styled-jsx": "^3.1.0"
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
